--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Paddle Game</title>
+        <title>Paddle</title>
         <style>
             #gameScreen {
                 border: 1px solid black;
